prevent blocks from overlapping
need to do the same for dragging

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,3 +10,7 @@ html, body {
 body {
 	font-family: Roboto, sans-serif;
 }
+
+canvas {
+	background-color: #1e1e1e;
+}
